# Udon_App

./: .gitignore  .vscode  README.md  alembic.ini  docker-compose 2.yml  package-lock.json  package.json  pytest.ini  udon.db
backend/: .coverage  .env  .env.example  .env.production  package-lock.json  package.json  pyproject.toml  requirements.txt  test.db  udon.db  udon_app.db
backend/alembic/versions/: _add_likes_comments.py  _add_stock_to_menus.py  _add_table_id_to_orders.py
backend/app/: database.py  main.py  models.py  pytest.ini  schemas.py  seed.py
backend/app/etl/: day2_build_menu_daily_train.py  day3_load_menu_daily_train_csv_to_db.py  seed_menus_and_orders 2.py
backend/app/forecast/: day3_forecast_baselines.py  db_io.py  metrics.py
backend/app/ml/: train_forecast 2.py
backend/app/routers/: analytics.py  comments.py  deps.py  likes.py  menu_comments.py  menus.py  menus_like_comment.py  orders.py  posts.py  reset_seed.py  tables.py  test_reset.py
backend/app/scripts/: seed_menus_and_orders.py
backend/app/services/: moderation.py
backend/app/sql/: create_menu_daily_forecast 2.sql
backend/app/util/: payload.py
backend/data/metrics/: README_day3.md  day3_eval.csv
backend/data/processed/: menu_daily_forecast.csv  menu_daily_train.csv
backend/script/: create_tables_once.py  export_snapshot.py  seed_dummy_orders 2.py
backend/tests/: conftest.py  test_analytics.py  test_board_moderation.py  test_forecast_api.py  test_likes_comments.py  test_menus.py  test_orders_and_stock.py  test_phase6_core.py
backend/versions/: add_mederation_logs.py
(+133 files in other folders)
